# urban_texturing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  option-0000-small.ply  plan.txt
aux/: camera.cpp  camera.h  cloud.cpp  cloud.h  cloudelement.h  cloudinfo.h  cloudproperty.h  element.cpp  element.h  patch.cpp  patch.h  patchinfo.cpp  patchinfo.h  property.h  shaderProgram.h  triangle.cpp  triangle.h
cg-texture/: cg1Shape.cpp  cg1Shape.h  fshader.glsl  shaderProgram.cpp  simpleShape.cpp  simpleShape.h  textureMain.cpp  textureParams.cpp  textureParams.h  vshader.glsl
cgal/: simple_triangulation_3.cpp
pcl/: greedy_projection.cpp
ply/: CMakeLists.txt  pcl_ply_reader.cc  pcl_ply_reader.h  ply_writer.cc  ply_writer.h
world/: myobjio.cpp  myobjio.h  myobjio_cpp  myobjio_h  mytexture.h  world.cpp  world.h
